--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,7 +8,7 @@ name = "llm-api-proxy"
 [[d1_databases]]
 binding = "qdb"
 database_name = "qdb"
-database_id = "your-d1-database-id"
+database_id = "b99b874c-a976-4768-b96c-7c9c676c4ce5"
 
 [vars]
 SITE_URL = "https://your-site.com"
