--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@
 name = 'llapi'
 main = "src/index.py"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["python_workers"]
 
 [env.production]
 name = "llapi"
@@ -14,11 +15,3 @@ database_id = "b99b874c-a976-4768-b96c-7c9c676c4ce5"
 [vars]
 SITE_URL = "https://your-site.com"
 SITE_NAME = "AI API Proxy"
-
-# Python相关配置
-[build]
-command = ""
-
-# 确保包含所有必要的文件
-[site]
-bucket = "./dist"
